--- a/articles/governance/blueprints/samples/nist-sp-800-171-r2.md
+++ b/articles/governance/blueprints/samples/nist-sp-800-171-r2.md
@@ -3,16 +3,16 @@ title: 'Blaupausenbeispiel „NIST SP 800-171 R2“: Übersicht'
 description: Enthält eine Übersicht über das Blaupausenbeispiel „NIST SP 800-171 R2“. Dieses Blaupausenbeispiel unterstützt Kunden bei der Bewertung spezifischer NIST SP 800-171 R2-Empfehlungen oder -Steuerungen.
 ms.date: 04/02/2021
 ms.topic: sample
-ms.openlocfilehash: d3010a5a2e00d4381f7f20d74d96059a2c44371a
-ms.sourcegitcommit: 77d7639e83c6d8eb6c2ce805b6130ff9c73e5d29
+ms.openlocfilehash: 707cda32d6d41f55862391a1d5b3abc0257b91e4
+ms.sourcegitcommit: 02d443532c4d2e9e449025908a05fb9c84eba039
 ms.translationtype: HT
 ms.contentlocale: de-DE
-ms.lasthandoff: 04/05/2021
-ms.locfileid: "106386260"
+ms.lasthandoff: 05/06/2021
+ms.locfileid: "108757106"
 ---
 # <a name="nist-sp-800-171-r2-blueprint-sample"></a>Blaupausenbeispiel „NIST SP 800-171 R2“
 
-Das Blaupausenbeispiel „NIST SP 800-171 R2“ bietet mithilfe von [Azure Policy](../../policy/overview.md) Schutzmaßnahmen für Governance, die Ihnen beim Bewerten bestimmter NIST SP 800-171 R2-Anforderungen oder -Steuerungen helfen. Diese Blaupause hilft Kunden bei der Bereitstellung eines Kernsatzes von Richtlinien für jede in Azure bereitgestellte Architektur, für die NIST SP 800-171 R2-Anforderungen oder -Steuerungen implementiert werden müssen.
+Im Blaupausenbeispiel „NIST SP 800-171 R2“ werden mithilfe von [Azure Policy](../../policy/overview.md) Schutzmaßnahmen für Governance bereitgestellt, die zum Bewerten bestimmter NIST SP 800-171 R2-Anforderungen oder -Steuerungen hilfreich sind. Diese Blaupause hilft Kunden bei der Bereitstellung eines Kernsatzes von Richtlinien für jede in Azure bereitgestellte Architektur, für die NIST SP 800-171 R2-Anforderungen oder -Steuerungen implementiert werden müssen.
 
 ## <a name="control-mapping"></a>Steuerungszuordnung
 
