--- a/articles/governance/blueprints/samples/iso-27001-2013.md
+++ b/articles/governance/blueprints/samples/iso-27001-2013.md
@@ -3,16 +3,16 @@ title: 'ISO 27001-Blaupausenbeispiel: Übersicht'
 description: Übersicht über das ISO 27001-Blaupausenbeispiel Dieses Blaupausenbeispiel unterstützt Kunden bei der Bewertung spezifischer ISO 27001-Kontrollen.
 ms.date: 05/01/2021
 ms.topic: sample
-ms.openlocfilehash: cfd0436de61ba1c035afad12be11ea9ea19b443f
-ms.sourcegitcommit: f6b76df4c22f1c605682418f3f2385131512508d
+ms.openlocfilehash: f40762c916404c0206afbea84585d59cbea6e8e8
+ms.sourcegitcommit: 02d443532c4d2e9e449025908a05fb9c84eba039
 ms.translationtype: HT
 ms.contentlocale: de-DE
-ms.lasthandoff: 04/30/2021
-ms.locfileid: "108324376"
+ms.lasthandoff: 05/06/2021
+ms.locfileid: "108763161"
 ---
 # <a name="iso-27001-blueprint-sample"></a>Blaupausenbeispiel „ISO 27001“
 
-Das Blaupausenbeispiel „ISO 27001“ bietet mithilfe von [Azure Policy](../../policy/overview.md) Schutzmaßnahmen für Governance, die Ihnen beim Bewerten bestimmter ISO 27001-Steuerungen helfen. Diese Blaupause hilft Kunden bei der Bereitstellung eines Kernsatzes von Richtlinien für jede in Azure bereitgestellte Architektur, die ISO 27001-Steuerungen implementieren muss.
+Im Blaupausenbeispiel „ISO 27001“ werden mithilfe von [Azure Policy](../../policy/overview.md) Schutzmaßnahmen für Governance bereitgestellt, die zum Bewerten bestimmter ISO 27001-Steuerungen hilfreich sind. Diese Blaupause hilft Kunden bei der Bereitstellung eines Kernsatzes von Richtlinien für jede in Azure bereitgestellte Architektur, die ISO 27001-Steuerungen implementieren muss.
 
 ## <a name="control-mapping"></a>Steuerungszuordnung
 
